# everstore-server

./: .gitignore  CMakeLists.txt  Dockerfile  install.sh  readme.md
Documentation/: Design.md  IPC.md  README.md
Server/: Authenticator.cpp  Authenticator.h  Store.cpp  Store.h  StoreClient.cpp  StoreClient.h  StoreServer.cpp  StoreServer.h  main.cpp
Server/Auth/: Authenticator.h  FixedUserAuthenticator.cpp  FixedUserAuthenticator.hpp
Server/Ipc/: IpcHost.cpp  IpcHost.h
Shared/: Bits.cpp  Bits.hpp  ByteBufferInputStream.cpp  Config.cpp  Config.h  ESErrorCodes.cpp  ESErrorCodes.h  ESHeader.h  ESRequestType.cpp  ESRequestType.h  Event.h  FileInputStream.h  FileLock.cpp  FileLock.h  FileOutputStream.cpp  FileOutputStream.h  IpcChildProcess.cpp  IpcChildProcess.h  IpcHost.cpp  IpcHost.h  Journal.cpp  Journal.h  LinkedList.h  Messages.h  Mutex.h  Process.h  Properties.cpp  Socket.cpp  Socket.h  Timestamp.h  Transaction.cpp  Transaction.h  es_config.h  everstore.h
Shared/Database/: Journal.cpp  Journal.h  OpenTransactions.cpp  OpenTransactions.hpp  Timestamp.cpp  Timestamp.h  Transaction.cpp  Transaction.h  TransactionID.h  TransactionId.h
Shared/File/: FileInputStream.cpp  FileInputStream.h  FileLock.h  FileOutputStream.cpp  FileOutputStream.h  FileUtils.cpp  FileUtils.h  Path.cpp  Path.hpp
Shared/Ipc/: ChildProcessID.h  ChildProcessId.h  IpcChild.cpp  IpcChild.h  IpcChildProcess.cpp  IpcChildProcess.h  IpcHost.cpp  IpcHost.h
Shared/Log/: Log.cpp  Log.hpp
Shared/Memory/: ByteBuffer.cpp  ByteBuffer.h  ByteBufferInputStream.cpp  ByteBufferInputStream.h  Bytes.h  MutableString.hpp
Shared/Message/: ESHeader.h  ESRequestType.cpp  ESRequestType.h
Shared/Mutex/: Mutex.cpp  Mutex.hpp
Shared/Mutex/Unix/: UnixMutex.cpp  UnixMutex.hpp
Shared/Mutex/Win32/: Win32Mutex.cpp  Win32Mutex.hpp
Shared/Process/: Process.cpp  Process.hpp  ProcessID.h
Shared/Process/Unix/: UnixProcess.cpp  UnixProcess.hpp
Shared/Process/Win32/: Win32Process.cpp  Win32Process.hpp
Shared/Socket/: Port.hpp  Socket.cpp  Socket.hpp
Shared/Socket/Unix/: UnixSocket.cpp  UnixSocket.hpp
Shared/Socket/Win32/: Win32Socket.cpp  Win32Socket.hpp
Shared/Unix/: GCCProcess.cpp  GCCProcess.h  GCCSocket.cpp
Shared/Win32/: Win32Mutex.cpp  Win32Socket.cpp
Shared/gcc/: GCCMutex.cpp  GCCProcess.cpp  GCCSocket.h
Shared/win32/: Win32Mutex.cpp  Win32Process.cpp  Win32Process.h  Win32Socket.h
Test/: Bytes_test.cpp  Config_test.cpp  FileLock_test.cpp  Journal_test.cpp  Path_test.cpp  Properties_test.cpp  Timestamp_test.cpp  Transaction_test.cpp  main.cpp
Test/test/: Test.cpp  Test.h  TestException.h  TestRunner.cpp  TestSuite.cpp  TestSuite.h  UnitTest.cpp  UnitTest.h
Test/test-resources/: override_all.properties
Worker/: AttachedSockets.cpp  AttachedSockets.h  Journals.cpp  Journals.h  Worker.cpp  Worker.h  main.cpp
everstore-server/: Authenticator.h  CMakeLists.txt  Store.cpp  Store.h  StoreClient.cpp  StoreClient.h  StoreServer.cpp  StoreServer.h  main.cpp
everstore-shared/: AutoClosable.h  ByteBufferInputStream.cpp  Bytes.cpp  Bytes.h  CMakeLists.txt  ChildProcessId.h  ESErrorCodes.cpp  ESErrorCodes.h  ESHeader.cpp  ESHeader.h  ESRequestType.cpp  ESRequestType.h  Event.h  FileInputStream.cpp  FileInputStream.h  FileLock.cpp  FileLock.h  FileOutputStream.cpp  FileOutputStream.h  FileUtils.cpp  FileUtils.h  IpcChild.cpp  IpcChild.h  IpcChildProcess.h  Journal.cpp  Journal.h  Messages.h  Mutex.h  Process.h  Properties.cpp  Properties.h  Socket.cpp  Socket.h  StringUtils.cpp  StringUtils.h  Timestamp.cpp  Timestamp.h  Transaction.cpp  Transaction.h  TransactionId.h  (+2 more)
everstore-shared-test/: ByteBuffer_test.cpp  Bytes_test.cpp  CMakeLists.txt  FileLock_test.cpp  Journal_test.cpp  Properties_test.cpp  Timestamp_test.cpp  Transaction_test.cpp  main.cpp
everstore-shared-test/test/: ITestCallback.h  Test.cpp  Test.h  TestException.cpp  TestRunner.h
everstore-shared-test/test-resources/: override_all.properties  override_one.properties
everstore-shared/gcc/: GCCMutex.h  GCCProcess.cpp  GCCSocket.cpp
everstore-shared/win32/: Win32Mutex.cpp  Win32Mutex.h  Win32Process.cpp  Win32Process.h  Win32Socket.cpp  Win32Socket.h
everstore-worker/: AttachedSockets.cpp  AttachedSockets.h  CMakeLists.txt  Journals.h  Worker.cpp  Worker.h  main.cpp
